--- a/templates/author-to-file-graph.html
+++ b/templates/author-to-file-graph.html
@@ -44,6 +44,7 @@
 <head><title>Committers changing same files</title></head>
 <body>
 <script src="d3.v3.min.js"></script>
+<script src="code-history.js"></script>
 <span id="author-to-file-graph"></span>
 <script>
 
