--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -44,6 +44,7 @@
 <head><title>Files changed in the same commit</title></head>
 <body>
 <script src="d3.v3.min.js"></script>
+<script src="code-history.js"></script>
 <span id="files-in-the-same-commit"></span>
 <script>
 
