--- a/templates/unused/stacked_bars.html
+++ b/templates/unused/stacked_bars.html
@@ -37,6 +37,9 @@ date,author,amount of commits\n\
 18/01/2013,Ooo,18\n\
 19/01/2013,Ooo,3\n\
 20/01/2013,Ooo,11\n\
+18/01/2013,GGG,11\n\
+19/01/2013,GGG,11\n\
+20/01/2013,GGG,11\n\
 "/*data_placeholder*/;
     var dateFormat = d3.time.format("%d/%m/%Y");
     var valueFormat = function(n) {
