--- a/analysis/templates/html/specs/SpecRunner.html
+++ b/analysis/templates/html/specs/SpecRunner.html
@@ -8,7 +8,7 @@
 
     <script type="text/javascript" src="../d3.v3.min.js"></script>
     <script type="text/javascript" src="../code-history.js"></script>
-    <script type="text/javascript" src="./code-history-spec.js"></script>
+    <script type="text/javascript" src="code-history-spec.js"></script>
 
     <script type="text/javascript">
         (function() {
