first attempt at bar chart with dispatcher

--- a/analysis/templates/html/specs/SpecRunner.html
+++ b/analysis/templates/html/specs/SpecRunner.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="../d3.v3.min.js"></script>
     <script type="text/javascript" src="../code-history.js"></script>
     <script type="text/javascript" src="code-history-spec.js"></script>
+    <script type="text/javascript" src="stacked-barchart-spec.js"></script>
 
     <script type="text/javascript">
         (function() {
